# gameProject

./: .cproject  .gitignore  .project  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  TODO.md  vanity.sh
demo/: .ycm_extra_conf.py  CMakeLists.txt
demo/config/: demo.config  plugins.cfg  resources.cfg
demo/include/: Demo.h  DemoApplication.h  DemoOpengl.h  DemoSDL.h
demo/resources/actors/: BadGuy.xml
demo/src/: Demo.cpp  DemoApplication.cpp  DemoApplication.h  DemoOpengl.cpp  DemoOpengl.h  DemoSDL.cpp  TutorialApplication.cpp  demo.cpp  main.cpp
demo/src/bins/: demo_opengl.cpp  demo_sdl.cpp
engine/: .cproject  .project  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  run_tests.sh
engine/config/: engine.config
engine/config/test/: DirectoryContainer_test.config
engine/demo/: CMakeLists.txt  main.cpp
engine/include/: Actor.h  Application.h  Color.h  Common.h  Event.h  EventBasic.h  EventData.h  EventListener.h  EventManager.h  Events.h  General.h  IGraphics.h  InputManager.h  InputManagerSDL.h  Logger.h  PdEngine.h  Renderer.h  RendererOpengl.h  RendererSDL.h  ResourceManager.h  Root.h  Task.h  TaskManager.h  Task_defs.h  Timer.h  Utils.h
engine/include/events/: DefaultEvent.h  EventListener.h  EventManager.h  EventManagerImpl.h  EventTypeID.h  I_Event.h  iEvent.h
engine/include/exceptions/: GLEWInitFailedException.h  GLShaderCompileError.h  InitFailedException.h  OpenglException.h  SDLInitFailedException.h
engine/include/math/: Frustum.h  Matrix4.h  Matrix4_impl.h  Plane.h  Plane_fwd.h  Vector3.h  Vector3_fwd.h  Vector4.h
engine/include/opengl/: Epoxy.h  OpenglRenderer.h  OpenglUtils.h  ShaderProgram.h  SimpleFragmentShader.h  SimpleProgram.h  SimpleVertexShader.h
engine/include/renderer/: BoundingBox.h  Camera.h  CameraNode.h  Color.h  Frustum.h  I_Renderable.h  I_Renderer.h  I_SceneNode.h  I_Window.h  Material.h  OpenglRenderer.h  OpenglUtils.h  RenderPass.h  Renderer.h  SDLRenderer.h  SDLWindow.h  Scene.h  SceneNode.h  ShaderProgram.h  SimpleFragmentShader.h  SimpleVertexShader.h  iRenderable.h
engine/include/resources/: DefaultResourceLoader.h  DirectoryContainer.h  I_ResourceLoader.h  Resource.h  ResourceCache.h  ResourceHandle.h  ResourceManager.h  SimpleResourceFile.h  iResourceFile.h  iResourceLoader.h
engine/include/tasks/: Task.h  TaskManager.h
engine/includes/: Application.h  BaseApplication.h  EventManager.h  General.h  GraphicsOgre.h  IGraphics.h  Task.h  TaskManager.h  Task_defs.h
engine/resources/config/: engine.conf  engine.xml
engine/src/: Application.cpp  Application.h  ApplicationImpl.cpp  ApplicationImpl.h  Applicatoin.cpp  BaseApplication.cpp  CMakeLists.txt  EventBasic.cpp  EventListener.cpp  EventManager.cpp  GraphicsOgre.cpp  IGraphics.cpp  InputManager.cpp  InputManagerSDL.cpp  InputManagerSDL.h  Logger.cpp  Logger.h  Renderer.cpp  Renderer.h  RendererOpengl.cpp  RendererSDL.cpp  ResourceManager.cpp  Root.cpp  Root.h  Task.cpp  TaskManager.cpp  Timer.cpp  Timer.h  Utils.cpp  Utils.h  build_options.h
engine/src/actors/: Actor.cpp  Actor.h  ActorComponent.h  ActorCreatedEvent.h  ActorDestroyedEvent.h  ActorFactory.cpp  ActorFactory.h  PlaceholderRenderComponent.cpp  PlaceholderRenderComponent.h  RenderComponent.cpp  RenderComponent.h  SimpleMarker.cpp  SimpleMarker.h
engine/src/app/: Application.cpp  Application.h  CMakeLists.txt  Config.cpp  Config.h  Config_Impl.cpp  Config_Impl.h
engine/src/events/: CMakeLists.txt  DefaultEvent.cpp  DefaultEvent.h  EventListener.h  EventManager.cpp  EventManager.h  EventManagerImpl.cpp  EventManagerImpl.h  EventTypeID.h  I_Event.h  ListenerHandle.cpp  ListenerHandle.h
engine/src/exceptions/: GLEWInitFailedException.cpp  GLShaderCompileError.cpp  GLShaderCompileError.h  InitFailedException.h  OpenglException.cpp  OpenglException.h  SDLInitFailedException.cpp  SDLInitFailedException.h
engine/src/input/: InputManager.cpp  InputManager.h  InputManagerSDL.cpp  InputManagerSDL.h
engine/src/logging/: CMakeLists.txt  Logger.cpp  Logger.h  Logger_templates.h
engine/src/math/: Frustum.cpp  Frustum.h  Math_fwd.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
engine/src/opengl/: OpenglRenderer.cpp  OpenglRenderer.h  OpenglUtils.cpp  OpenglUtils.h  ShaderProgram.cpp  ShaderProgram.h  SimpleFragmentShader.cpp  SimpleFragmentShader.h  SimpleProgram.cpp  SimpleProgram.h  SimpleVertexShader.cpp  SimpleVertexShader.h
engine/src/renderer/: BoundingBox.cpp  CameraNode.cpp  CameraNode.h  Color.cpp  Color.h  Frustum.cpp  I_Renderer.h  I_SceneNode.h  I_Window.h  Material.cpp  Material.h  OpenglRenderer.cpp  OpenglUtils.cpp  RenderPass.h  Renderer.cpp  ResourceHandle.cpp  RootNode.cpp  RootNode.h  SDLRenderer.cpp  SDLWindow.cpp  SDLWindow.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  SceneNodeProperties.cpp  ShaderProgram.cpp  SimpleFragmentShader.cpp  SimpleVertexShader.cpp
engine/src/resources/: DefaultResourceLoader.cpp  DefaultResourceLoader.h  DirectoryContainer.cpp  DirectoryContainer.h  I_ResourceContainer.h  I_ResourceLoader.h  Resource.cpp  Resource.h  ResourceCache.cpp  ResourceCache.h  ResourceHandle.cpp  ResourceHandle.h  ResourceManager.cpp  ResourceManager.h  SimpleResourceFile.cpp  SimpleResourceFile.h
engine/src/tasks/: CMakeLists.txt  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  Task_defs.h
engine/src/utils/: CMakeLists.txt  Deprecated.h  Logger.cpp  Logger.h  Memory.h  NotUsed.h  Strings.cpp  Strings.h  Strings_templ.h  Strings_templates.h  Timer.cpp  fwd_BoostOpts.h
engine/test/: CMakeLists.txt  Timer_test.cpp  Timer_test.h  main.cpp  run_tests.cpp
engine/test/app/: Config_test.cpp
engine/test/events/: DefaultEvent_test.cpp  EventManager_test.cpp
engine/test/math/: Frustum_test.cpp  (+2 more)
utils/: .ycm_extra_conf.py  CMakeLists.txt
utils/include/: pdLogger.h  pdLogger_definitions.h  pdStrings.h
utils/includes/: Logger.h  Strings.h  pdLogger.h  pdStrings_definitions.h
utils/src/: Logger.cpp  Strings.cpp
utils/test/: Strings_test.cpp  Strings_test.h  main.cpp
(+44 files in other folders)
